# purplewood

./: Cargo.toml  README.md  makefile
.github/workflows/: rust-core.yaml
doc/: crates.js  help.html  settings.html  src-files.js
doc/aho_corasick/: struct.FindIter.html  struct.FindOverlappingIter.html  struct.PatternID.html  struct.Span.html  struct.StreamFindIter.html
doc/arrayvec/: struct.ArrayString.html  struct.ArrayVec.html  struct.Drain.html  struct.IntoIter.html
doc/console/: enum.TermTarget.html  struct.AnsiCodeIterator.html  struct.StyledObject.html  struct.Term.html
doc/deranged/: struct.OptionRangedI128.html  struct.OptionRangedI16.html  struct.OptionRangedI32.html  struct.OptionRangedI64.html  struct.OptionRangedI8.html  struct.OptionRangedIsize.html  struct.OptionRangedU128.html  struct.OptionRangedU16.html  struct.OptionRangedU32.html  struct.OptionRangedU64.html  struct.OptionRangedU8.html  struct.OptionRangedUsize.html  struct.RangedI128.html  struct.RangedI16.html  struct.RangedI32.html  struct.RangedI64.html  struct.RangedI8.html  struct.RangedIsize.html  struct.RangedU128.html  struct.RangedU16.html  struct.RangedU32.html  struct.RangedU64.html  struct.RangedU8.html  struct.RangedUsize.html
doc/encode_unicode/: all.html  fn.iter_bytes.html  fn.iter_units.html  index.html  struct.Utf16Char.html  struct.Utf16Iterator.html  struct.Utf8Char.html  struct.Utf8Iterator.html  trait.CharExt.html  trait.IterExt.html  trait.SliceExt.html  trait.StrExt.html  trait.U16UtfExt.html  trait.U8UtfExt.html
doc/futures/: all.html  index.html
doc/futures_util/: all.html  index.html
doc/generic_array/: struct.GenericArray.html
doc/http/: struct.Error.html
doc/http_body/: struct.Collected.html  struct.Empty.html  struct.Full.html  struct.Limited.html  struct.Trailers.html  trait.Body.html
doc/hyper/: struct.Method.html  struct.StatusCode.html  struct.Uri.html
doc/hyper_rustls/: enum.MaybeHttpsStream.html
doc/hyper_tls/: enum.MaybeHttpsStream.html  struct.HttpsConnecting.html  struct.TlsStream.html
doc/indicatif/: struct.HumanCount.html  struct.ProgressBarIter.html
doc/ipnet/: enum.IpAddrRange.html  enum.IpNet.html  enum.IpSubnets.html  struct.Ipv4AddrRange.html  struct.Ipv4Net.html  struct.Ipv4Subnets.html  (+3 more)
src/: lib.rs  main.rs  tests.rs
(+10250 files in other folders)
