[package]
name = "purplewood"
version = "0.1.3"
authors = ["zephira <zephira@protonmail.com>"]
edition = "2021"
license = "GNU General Public License v3.0"
repository = "https://github.com/Zephira58/purplewood"
readme = "README.md"
description = "A discord bot built with the serentiy framework on rust. To be used within a gaming community i'm a member of for ease of use."
publish = false

[dependencies]
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
rand = "0.8.5"
self_update = "0.39.0"