[package]
name = "purplewood"
version = "0.1.6"
authors = ["zephira <business@zephira.uk>"]
edition = "2021"
license = "GNU General Public License v3.0"
repository = "https://github.com/Zephira58/purplewood"
readme = "README.md"
description = "A discord bot built with the serentiy framework on rust. To be used within a gaming community i'm a member of for ease of use."
publish = false

[dependencies]
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
rand = "0.8.5"
self_update = "0.41.0"
colour = "1.1.0"
serde_yaml = "0.9.34"